--- a/_config.yml
+++ b/_config.yml
@@ -49,8 +49,8 @@ url:
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: "/blog"
-production_url : http://mac100mokk1.github.io.com/blog
-BASE_PATH : http://mac100mokk1.com/blog
+production_url : http://mac100mokk1.github.io/blog
+BASE_PATH : http://mac100mokk1.io/blog
 
 #
 # !! You don't need to change any of the configuration flags below !!
