--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: mac100mokk1's blog
+name: mac100mokk1のブログ
 
 # Short bio or description (displayed in the header)
-description: secret
+description: 今までやったあれこれの備忘録のようなもの
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 #avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
